--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
     "eslint": "8.45.0",
+    "prisma": "5.0.0",
     "tsup": "7.1.0",
     "tsx": "3.12.7",
     "typescript": "5.1.6"
   },
   "dependencies": {
+    "@prisma/client": "5.0.0",
     "dotenv": "16.3.1",
     "fastify": "4.21.0",
     "zod": "3.21.4"
