--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsup src --out-dir build"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.2",
     "@types/node": "20.4.5",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.0.0",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "4.21.0",
     "zod": "3.21.4"
