--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "release": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test" : "vitest"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.2",
@@ -17,7 +18,9 @@
     "prisma": "5.0.0",
     "tsup": "7.1.0",
     "tsx": "3.12.7",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.34.2"
   },
   "dependencies": {
     "@prisma/client": "5.0.0",
