--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "dev": "tsx watch src/server.ts",
     "release": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test" : "vitest"
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.4.5",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
+    "@vitest/coverage-v8": "0.34.2",
     "eslint": "8.45.0",
     "prisma": "5.0.0",
     "tsup": "7.1.0",
