--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "tsup": "7.1.0",
     "tsx": "3.12.7",
     "typescript": "5.1.6",
-    "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.34.2"
+    "vite-tsconfig-paths": "4.2.0"
   },
   "dependencies": {
     "@fastify/jwt": "7.2.0",
@@ -31,6 +30,7 @@
     "dayjs": "1.11.9",
     "dotenv": "16.3.1",
     "fastify": "4.21.0",
+    "vitest": "0.33.0",
     "zod": "3.21.4"
   }
 }
