--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "tsx watch src/server.ts",
     "release": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest",
+    "test:unit": "vitest run --dir src/useCases",
+    "test:create-e2e-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-e2e-environment": "npm link vitest-environment-prisma",
+    "pretest:e2e": "run-s test:create-e2e-environment test:install-e2e-environment",
+    "test:e2e": "vitest run --dir src/http/controllers/tests",
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
@@ -30,6 +34,7 @@
     "dayjs": "1.11.9",
     "dotenv": "16.3.1",
     "fastify": "4.21.0",
+    "npm-run-all": "4.1.5",
     "vitest": "0.33.0",
     "zod": "3.21.4"
   }
