--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "test:create-e2e-environment": "npm link ./prisma/vitest-environment-prisma",
     "test:install-e2e-environment": "npm link vitest-environment-prisma",
     "pretest:e2e": "run-s test:create-e2e-environment test:install-e2e-environment",
-    "test:e2e": "vitest run --dir src/http/controllers/tests",
+    "test:e2e": "vitest  --dir src/http/controllers/tests",
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.4.5",
+    "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
     "@vitest/coverage-v8": "0.34.2",
@@ -35,6 +36,7 @@
     "dotenv": "16.3.1",
     "fastify": "4.21.0",
     "npm-run-all": "4.1.5",
+    "supertest": "6.3.3",
     "vitest": "0.33.0",
     "zod": "3.21.4"
   }
